# alethea-network

./: .gitignore  Cargo.toml  README.md  linera.toml
alethea-oracle-types/: Cargo.toml
alethea-oracle-types/src/: lib.rs
docs/: GITBOOK_CLOUD_SETUP.md  GITBOOK_SETUP.md  README.md  SUMMARY.md  book.json
docs/assets/: LOGO_DESCRIPTION.md
docs/getting-started/: api-reference.md  deployment.md  integration-complete.md  introduction.md  key-concepts.md  quick-start.md  troubleshooting.md  what-is-alethea.md
market-chain/: Cargo.toml  linera.toml
market-chain/src/: contract.rs  lib.rs  service.rs  state.rs
oracle-coordinator/: Cargo.toml  linera.toml
oracle-coordinator/src/: contract.rs  lib.rs  service.rs  state.rs  types.rs
voter-chain/: Cargo.toml  linera.toml
voter-chain/src/: contract.rs  lib.rs  service.rs  state.rs
