[package]
name = "alethea-oracle-coordinator"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.linera]
contract = "../target/wasm32-unknown-unknown/release/oracle_coordinator_contract.wasm"
service = "../target/wasm32-unknown-unknown/release/oracle_coordinator_service.wasm"

[dependencies]
linera-sdk = { workspace = true }
linera-views = "0.15.4"
linera-views-derive = "0.15.4"
serde = { workspace = true }
async-graphql = { workspace = true }
futures = { workspace = true }
bcs = { workspace = true }
alethea-oracle-types = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "oracle_coordinator_contract"
path = "src/contract.rs"

[[bin]]
name = "oracle_coordinator_service"
path = "src/service.rs"
